crates/reinhardt-pages/tests/ui/form/fail/list_rejects_value_field.stderr
error: list reference 'suggestions' must resolve to a Datalist entry
  --> tests/ui/form/fail/list_rejects_value_field.rs:10:11
   |
10 |                 list: suggestions,
   |                       ^^^^^^^^^^^
